# inline-sql

./: .editorconfig  .gitignore  LICENSE  README.md  SECURITY.md  inlinesqlinaction.ipynb  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
inline_sql/: __init__.py
inline_sql/_src/: executor.py  runtime.py
tests/: add_test.py  files_test.py  sql_test.py
tests/data/: disasters.csv
