[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inline-sql"
description = "Inline SQL in any Python program, on local dataframes"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["database", "sql", "language"]
authors = [
  { name = "Eric Zhang", email = "ekzhang1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: SQL",
  "License :: OSI Approved :: MIT License",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "duckdb>=0.5",
  "pandas>=1.3",
  "sqlparse>=0.4",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ekzhang/inline-sql#readme"
Issues = "https://github.com/ekzhang/inline-sql/issues"
Source = "https://github.com/ekzhang/inline-sql"

[tool.hatch.version]
path = "inline_sql/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=inline_sql --cov=tests"
format = "black ."

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "inline_sql/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
